# ailang

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  cli.py  docker  grammar.lark  ir.py  package-lock.json  parser.py  pyproject.toml  roadmap.md  transpiler.cpp
.github/workflows/: ci.yml
cli/: main.py
compiler/: file_utils.py  grammar.lark  ir.py  lexer.py  parser.py
compiler/transpiler/: cpp_transpiler.py  js_transpiler.py  py_transpiler.py
docs/: implementationplan.md
examples/: mymodel.ail  runtime_example.py
prompts/: README.md
prompts/examples/: advanced_use_cases.md  model_definition.md
prompts/integrations/: anthropic.md  openai.md
prompts/system/: ailang_expert.md
prompts/templates/: code_generation.md
runtime/: __init__.py  base_runtime.py
runtime/cpp/: runtime.cpp
runtime/js/: runtime.js
runtime/py/: runtime.py
test/: direct-test.js  test-server.js
tests/: test_parser.py  test_validator.py
validators/: README.md  __init__.py  cli.py  performance_analyzer.py  semantic_analyzer.py  validator.ts
vscode-extension/: .eslintrc.json  .vscodeignore  README.md  check_language_settings.js  feature_test.ail  language-configuration.json  package-lock.json  package.json  test.ail  test2.ail  test_features.ail  test_language_id.ail  tsconfig.json  tsconfig.tsbuildinfo
vscode-extension/server/: package-lock.json  package.json  tsconfig.json
vscode-extension/server/src/: server.js  server.js.map  server.ts
vscode-extension/snippets/: ailang.json
vscode-extension/src/: README.md  codeActionProvider.ts  completionProvider.ts  debug.ts  diagnosticProvider.ts  extension.ts  foldingRangeProvider.ts  formatter.ts  hoverProvider.ts  settingsManager.ts
vscode-extension/src/test/: codeActionProvider.test.ts
vscode-extension/syntaxes/: ailang.tmLanguage.json
vscode-extension/test/: extension.test.ts  index.ts  runTest.ts  simple-tests.ts  syntax_test.ail
web_repl/: index.html
